Fixed article clipping bug

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,6 +68,8 @@ body {
   border-top: 1px solid #eaeaea;
   padding-top: 15px;
   padding-bottom: 15px;
+  table-layout: fixed;
+  word-wrap: break-word;
 }
 
 footer {
